--- a/LT_Frontend/src/Styling/Styling.scss
+++ b/LT_Frontend/src/Styling/Styling.scss
@@ -1,3 +1,29 @@
 .content {
-    padding-top: 30px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+.list-group {
+padding-top: 20px;
+width: 350px;
+
+}
+
+.list-group-item {
+    background-color: #7c7c7c;
+    
+}
+
+
+.list-group-item-dark {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    color: black;
+    background-color:#7c7c7c;
+
+}
+
+.content {
+    background-color: #3c3c3c;
+    height: 100vh;
 }
